version/0.30/_sources/api/solver/_autosummary/settings/flux_1_child.rst.txt
:orphan:

.. _flux_1_child:

flux_child
==========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.flux_1_child
    :show-inheritance:

.. rubric:: Attributes

================================================================   ==============================================================================

Attribute                                                                                                                                 Summary

================================================================   ==============================================================================
:ref:`name <name_2>`                                                                                                          Name of the object.

:ref:`report_type <report_type>`                                       The report type; the list may vary on the selected report definition type.

:ref:`boundaries <boundaries_1>`                                                                                              'boundaries' child.

:ref:`per_zone <per_zone>`                                                                                                      'per_zone' child.

:ref:`average_over <average_over>`                                                                                          'average_over' child.

:ref:`retain_instantaneous_values <retain_instantaneous_values>`                                             'retain_instantaneous_values' child.

:ref:`phase <phase_26>`                                                                                                            'phase' child.

:ref:`physics <physics_1>`                                                                                                       'physics' child.

:ref:`geometry <geometry_7>`                                                                                                    'geometry' child.

:ref:`output_parameter <output_parameter_1>`                                   Option to make report definition available as an output parameter.

================================================================   ==============================================================================

.. rubric:: Methods

========================================================   ======================================================================

Method                                                                                                                    Summary

========================================================   ======================================================================
:ref:`create_output_parameter <create_output_parameter>`       Option to make report definition available as an output parameter.

========================================================   ======================================================================

.. rubric:: Included in:

======================   ===============================

Parent                                           Summary

======================   ===============================
:ref:`flux_1 <flux_1>`       The report definition type.

======================   ===============================

